--- a/styles/style.css
+++ b/styles/style.css
@@ -396,6 +396,21 @@ p
     margin: 0.5vw;
 }
 
+.printbtn
+{
+    width: 2vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    color:rgb(16, 124, 25);
+    background-color: rgb(46, 255, 56);
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0.5vw;
+}
+
 .delfbtn
 {
     width: 2vw;
@@ -473,4 +488,63 @@ to {
     opacity: 0%;
     scale: 0.5;
 }
+}
+
+@media print {
+    body {
+        font-family: Arial, sans-serif;
+    }
+    .printable {
+        display: block;
+        margin: 20px auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        page-break-inside: avoid;
+    }
+    p {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+
+    header
+    {
+        position: absolute;
+        width: 80%;
+        height: 50%;
+        border-style: none;
+    }
+
+    .dmstrip
+    {
+        display: block;
+        background-color: rgba(0, 0, 0, 0);
+        border-style: none;
+    }
+
+    .c2
+    {
+        border-style: none;
+    }
+    
+    .btn
+    {
+        font-family: Arial, sans-serif;
+        font-size: smaller;
+        border-style: solid;
+        border-width: 1px;
+        padding: 10px;
+    }
+
+    h1
+    {
+    font-size: smaller;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    }
+
+    .l, .r, .filmctrl, .delfbtn, .addbtn, .printbtn {
+        display: none;
+    }
 }
